Fix overflow for long code blocks

--- a/src/style/components/post.scss
+++ b/src/style/components/post.scss
@@ -28,6 +28,10 @@
 
   &__text {
     margin-block: 1rem;
+
+    code {
+      overflow-wrap: anywhere;
+    }
   }
 
   img {
